--- a/Website/style.css
+++ b/Website/style.css
@@ -2,3 +2,32 @@
     display:block;
     text-align: center;
 }
+
+.faq-button{
+  margin:auto;
+  margin-left:0;
+  width: 200px;
+  padding: 10px;
+  background-color: rgba(255, 255, 255, 0);
+  border-radius: 8px;
+  border: solid 1px #203f49;
+  color: white;
+  cursor: pointer;
+  border-color:black
+}
+
+.faq-button a{
+  text-decoration: none;
+  color: #111111;
+  font-weight:bold;
+}
+
+.faq-summary{
+  padding-left: 17px;
+}
+.faq-summary-text{
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+  padding-left:0;
+ }
