--- a/Website/style.css
+++ b/Website/style.css
@@ -13,7 +13,7 @@
   border: solid 1px #203f49;
   color: white;
   cursor: pointer;
-  border-color:black
+  border-color:black; 
 }
 
 .faq-button a{
@@ -27,7 +27,9 @@
 }
 .faq-summary-text{
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  max-width: 1200px;
   padding: 10px;
   padding-left:0;
+  align-items: baseline;
  }
