--- a/style.css
+++ b/style.css
@@ -29,9 +29,8 @@
   display: flex;
   flex-direction: row;
   max-width: 1200px;
-  padding: 10px;
-  padding-left:0;
-  align-items: baseline;
+  padding-left: 20%;
+  padding-right: 20%;
  }
 
 .content{
