--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@
   display: flex;
   flex-direction: row;
   max-width: 1200px;
+  padding: 20px;
   padding-left: 20%;
   padding-right: 20%;
  }
@@ -36,4 +37,5 @@
 .content{
     padding-left: 20%;
     padding-right: 20%;
+    text-align: justify;
 }
