--- a/style.css
+++ b/style.css
@@ -27,8 +27,6 @@
   color: white;
   cursor: pointer;
   border-color:black;
-  padding-left: 30%;
-  padding-right: 30%;
 }
 
 
@@ -46,8 +44,8 @@
   flex-direction: row;
   max-width: 1200px;
   padding: 20px;
-  padding-left: 30%;
-  padding-right: 30%;
+  margin-left: 20%;
+  margin-right: 20%;
  }
 
 .content{
