--- a/style.css
+++ b/style.css
@@ -59,5 +59,17 @@
 }
 
 .graph-content{
-    text-align: center;
+  text-align: center;
+  width: 100%;
+  min-height: 100vh;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  padding: 15px;
+  background: rgba(255,255,255,0.8);
 }
