--- a/style.css
+++ b/style.css
@@ -59,17 +59,16 @@
 }
 
 .graph-content{
-  text-align: center;
-  width: 100%;
-  min-height: 100vh;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-  padding: 15px;
-  background: rgba(255,255,255,0.8);
+    text-align: center;
+    width: 1200px;
+    margin-left: 20%;
+    margin-right:20%;
+    background: #80c64a;
+    background: -webkit-linear-gradient(45deg, #56ab2f, #a8e063);
+    background: -o-linear-gradient(45deg, #56ab2f, #a8e063);
+    background: -moz-linear-gradient(45deg, #56ab2f, #a8e063);
+    background: linear-gradient(45deg, #56ab2f, #a8e063);
+    border-radius: 10px;
+    overflow: hidden;
+    padding: 72px 55px 65px 55px;
 }
