--- a/style.css
+++ b/style.css
@@ -60,14 +60,14 @@
 
 .graph-content{
     text-align: center;
-    width: 1200px;
+    max-width: 1200px;
     margin-left: 20%;
     margin-right:20%;
     background: #80c64a;
-    background: -webkit-linear-gradient(45deg, #56ab2f, #a8e063);
-    background: -o-linear-gradient(45deg, #56ab2f, #a8e063);
-    background: -moz-linear-gradient(45deg, #56ab2f, #a8e063);
-    background: linear-gradient(45deg, #56ab2f, #a8e063);
+    background: -webkit-linear-gradient(45deg, #A9A9A9, #D3D3D3);
+    background: -o-linear-gradient(45deg, #A9A9A9, #D3D3D3);
+    background: -moz-linear-gradient(45deg, #A9A9A9, #D3D3D3);
+    background: linear-gradient(45deg, #A9A9A9, #D3D3D3);
     border-radius: 10px;
     overflow: hidden;
     padding: 72px 55px 65px 55px;
